# torchode-paper

./: .gitignore  README.md  arxivify.sh  dlde_neurips_2022.sty  example.py  example_jit.py  main.bib  main.tex  terms.tex
results/: benchmark-results.ipynb  common.py  pid.ipynb  pid.pickle  pid.py  requirements.txt  run_fen.sh  run_ffjord.sh  run_vdp_benchmark.sh  run_vdp_steps.sh  vdp-benchmark.pickle  vdp-steps.pickle  vdp.ipynb  vdp.py
results/ffjord/: .gitignore  train_cnf.py  train_misc.py
results/ffjord/lib/: utils.py
results/ffjord/lib/layers/: cnf.py  odefunc.py
results/ffjord/lib/layers/diffeq_layers/: basic.py
results/ffjord/lib/layers/wrappers/: cnf_regularization.py
results/finite-element-networks/: .gitignore
results/finite-element-networks/examples/: train.py
results/finite-element-networks/finite_element_networks/: data.py  fen.py  ode_solver.py  plots.py
results/finite-element-networks/finite_element_networks/lightning/: metrics.py  regression.py  wandb.py
results/torchdiffeq/torchdiffeq/_impl/: adjoint.py
results/torchdyn/: setup.py
results/torchdyn/torchdyn/core/: problems.py
results/torchdyn/torchdyn/numerics/: sensitivity.py
results/torchode/: .gitignore  README.md  pyproject.toml
results/torchode-utils/: README.md  pyproject.toml
results/torchode-utils/torchode_utils/: __init__.py  timing.py
results/torchode/torchode/: __init__.py  adjoints.py  interface.py  problems.py  terms.py
results/torchode/torchode/single_step_methods/: base.py  euler.py
